--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -1,7 +1,7 @@
 :root {
   /* Colors */
   --color-bg: #f3efe2;
-  --color-primary-1: #60473e;
+  --color-primary-1: #60472E;
   --color-primary-2: #75503c;
   --color-primary-3: #8f7a59;
   --color-gray-1: #1c1a18;
